Padding/Spacing Fix

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-        style.css
-        inflooplabs.github.io
+style.css
+inflooplabs.github.io
 
-        Created by Vihaan on 2026-04-11.
+Created by Vihaan on 2026-04-11.
 */
 @font-face {
         font-family: "SF Pro";
@@ -197,8 +197,7 @@ nav {
         gap: 30px;
 }
 .banner {
-        padding-top: 120px;
-        padding-bottom: 40px;
+        padding: 60px 0;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -246,7 +245,7 @@ nav {
         border: 1px solid var(--accent-color);
 }
 .product-banner {
-        padding: 40px 0;
+        padding: 60px 0;
         text-align: center;
         width: 100%;
         display: flex;
@@ -327,7 +326,7 @@ nav {
         color: rgba(29, 29, 31, 0.7);
 }
 footer {
-        padding: 40px 0;
+        padding: 60px 0;
         background-color: var(--card-bg);
         text-align: center;
         font-size: 12px;
